force-app/main/default/objects/StepDuration__c/StepDuration__c.object-meta.xml
<CustomObject>
    <label>Step Duration</label>
    <nameField>
        <displayFormat>SD-{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Durations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>