force-app/main/default/objects/StepDuration__c/fields/calculatedStepDurationHours__c.field-meta.xml
<CustomField>
    <fullName>calculatedStepDurationHours__c</fullName>
    <description>Step duration hours - calculated</description>
    <inlineHelpText>Step duration hours - calculated</inlineHelpText>
    <label>Step Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>