force-app/main/default/objects/StepDuration__c/fields/newStep__c.field-meta.xml
<CustomField>
    <fullName>newStep__c</fullName>
    <description>New step for the spec or sample opportunity</description>
    <inlineHelpText>New step for the spec or sample opportunity</inlineHelpText>
    <label>New Step</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>