force-app/main/default/objects/StepDuration__c/fields/newStepDateTime__c.field-meta.xml
<CustomField>
    <fullName>newStepDateTime__c</fullName>
    <label>New Step Date/Time</label>
    <type>DateTime</type>
</CustomField>