force-app/main/default/objects/StepDuration__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Step Durations</relationshipLabel>
    <relationshipName>Step_Durations</relationshipName>
    <type>Lookup</type>
</CustomField>