force-app/main/default/objects/StepDuration__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <formula>CASE(  previousStep__c  , 
&quot;New&quot;, 1,
&quot;Innovation Assessment&quot;, 2,
&quot;Missing Information Assessment&quot;, 3,
&quot;Capable Assessment&quot;, 4,
&quot;Standard Assessment&quot;, 5,
&quot;Manufacturer Assignment&quot;, 6,
&quot;Risk Assessment&quot;, 7,
&quot;CM Cost Assessment&quot;, 8,
&quot;Pricing Assignment&quot;, 9,
&quot;Pricing Approved&quot;, 10,
100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>