force-app/main/default/objects/StepDuration__c/fields/peDurationWithWeekends__c.field-meta.xml
<CustomField>
    <fullName>peDurationWithWeekends__c</fullName>
    <formula>24 * ( plantEngineerReviewDate__c - newStepDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Risk Assessment,this is the duration (hours) from when the step was entered to when the spec was approved.</inlineHelpText>
    <label>PE Duration (with Weekends)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>