force-app/main/default/objects/StepDuration__c/fields/plantEngineerReviewDate__c.field-meta.xml
<CustomField>
    <fullName>plantEngineerReviewDate__c</fullName>
    <formula>specification__r.plantEngineerReviewDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE Review Date/Time</label>
    <type>DateTime</type>
</CustomField>