force-app/main/default/objects/StepDuration__c/fields/previousStep__c.field-meta.xml
<CustomField>
    <fullName>previousStep__c</fullName>
    <description>Previous step for the spec or sample opportunity</description>
    <inlineHelpText>Previous step for the spec or sample opportunity</inlineHelpText>
    <label>Previous Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>