force-app/main/default/objects/StepDuration__c/fields/previousStepDateTime__c.field-meta.xml
<CustomField>
    <fullName>previousStepDateTime__c</fullName>
    <description>Previous status date/time</description>
    <inlineHelpText>Previous status date/time</inlineHelpText>
    <label>Previous Step Date/Time</label>
    <type>DateTime</type>
</CustomField>