force-app/main/default/objects/StepDuration__c/fields/qeDurationWithWeekends__c.field-meta.xml
<CustomField>
    <fullName>qeDurationWithWeekends__c</fullName>
    <formula>24 * ( qualityEngineerReviewDate__c -  previousStepDateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QE Duration (with Weekends)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>