force-app/main/default/objects/StepDuration__c/fields/qualityEngineerReviewDate__c.field-meta.xml
<CustomField>
    <fullName>qualityEngineerReviewDate__c</fullName>
    <formula>specification__r.qualityEngineerReviewDate__c</formula>
    <label>QE Review Date/Time</label>
    <type>DateTime</type>
</CustomField>