force-app/main/default/objects/StepDuration__c/fields/RiskDurationPeHours__c.field-meta.xml
<CustomField>
    <fullName>RiskDurationPeHours__c</fullName>
    <formula>IF( previousStep__c = &apos;Risk Assessment&apos;, 





( 24 * ( 
( 5 * FLOOR( ( DATEVALUE( newStepDateTime__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( newStepDateTime__c ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 24 / 24 * ( MOD( newStepDateTime__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( specification__r.qualityEngineerReviewDate__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( specification__r.qualityEngineerReviewDate__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 24 * ( MOD( specification__r.qualityEngineerReviewDate__c - DATETIMEVALUE( &apos;1900-01-08 12:00:00&apos; ), 1) ) ) 
) 
) 
)) 



,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE Risk Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>