force-app/main/default/objects/StepDuration__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification</label>
    <referenceTo>Specification__c</referenceTo>
    <relationshipLabel>Step Durations</relationshipLabel>
    <relationshipName>Step_Durations</relationshipName>
    <type>Lookup</type>
</CustomField>