force-app/main/default/objects/StepDuration__c/fields/stepDurationWithWeekends__c.field-meta.xml
<CustomField>
    <fullName>stepDurationWithWeekends__c</fullName>
    <formula>24 * ( newStepDateTime__c -  previousStepDateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Duration (with Weekends)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>